// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeDisabledFalse match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="MuiSelectUnstyled-root css-10s1kls"
      type="button"
    >
      
      <ion-icon
        name="chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`BadgeDisabledTrue match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="MuiSelectUnstyled-root Mui-disabled css-10s1kls"
      disabled=""
      type="button"
    >
      
      <ion-icon
        name="chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`BadgeLabel match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <label
      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-root MuiFormLabel-colorPrimary css-ssr94h-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      Label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="MuiSelectUnstyled-root css-10s1kls"
      type="button"
    >
      
      <ion-icon
        name="chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`BadgeMultiple match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <label
      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-root MuiFormLabel-colorPrimary css-ssr94h-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
    >
      Label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="MuiSelectUnstyled-root css-10s1kls"
      type="button"
    >
      
      <ion-icon
        name="chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`BadgeRequiredFalse match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="MuiSelectUnstyled-root css-10s1kls"
      type="button"
    >
      
      <ion-icon
        name="chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`BadgeRequiredTrue match snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1c9gikl-MuiFormControl-root"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="MuiSelectUnstyled-root css-10s1kls"
      type="button"
    >
      
      <ion-icon
        name="chevron-down"
      />
    </button>
  </div>
</div>
`;
